--- a/index.html
+++ b/index.html
@@ -114,15 +114,17 @@
       display:block;
     }
 
-    /* TIME LABEL */
-    .time-label{
-      position:absolute;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      gap:4px;
-      transform: translateY(-6px);
-      font-family: 'Poppins', sans-serif; /* font morbido */
+  .time-label{
+  position:absolute;
+  top: 50%;
+  left: 50%;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  gap:4px;
+  transform: translate(-50%, -50%);
+  font-family: 'Poppins', sans-serif;
+}
     }
 
     .time-label .big{
