--- a/index.html
+++ b/index.html
@@ -116,14 +116,13 @@
 
   .time-label{
   position:absolute;
-  top: 50%;
-  left: 50%;
   display:flex;
   flex-direction:column;
   align-items:center;
   gap:4px;
-  transform: translate(-50%, -50%);
+  transform: translateY(0); /* o un valore positivo tipo 4px se vuoi ancora più giù */
   font-family: 'Poppins', sans-serif;
+}
 }
     }
 
