--- a/index.html
+++ b/index.html
@@ -114,14 +114,17 @@
       display:block;
     }
 
-  .time-label{
+ .time-label{
   position:absolute;
+  top: 50%;
+  left: 50%;
   display:flex;
   flex-direction:column;
   align-items:center;
   gap:4px;
-  transform: translateY(0); /* o un valore positivo tipo 4px se vuoi ancora più giù */
+  transform: translate(-50%, -40%); /* sposta leggermente verso il basso rispetto al centro */
   font-family: 'Poppins', sans-serif;
+
 }
 }
     }
