--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     }
 
     .time-label .big{
-      font-size:48px;
+      font-size:8vw;
       font-weight:700;
       letter-spacing:1px;
       color:var(--fg);
