--- a/index.html
+++ b/index.html
@@ -114,23 +114,19 @@
       display:block;
     }
 
- .time-label{
-  position:absolute;
-  top: 50%;
-  left: 50%;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  gap:4px;
-  transform: translate(-50%, -40%); /* sposta leggermente verso il basso rispetto al centro */
-  font-family: 'Poppins', sans-serif;
-
-}
-}
+    /* TIME LABEL */
+    .time-label{
+      position:absolute;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      gap:4px;
+      transform: translateY(-6px);
+      font-family: 'Poppins', sans-serif; /* font morbido */
     }
 
     .time-label .big{
-      font-size:8vw;
+      font-size:48px;
       font-weight:700;
       letter-spacing:1px;
       color:var(--fg);
@@ -160,7 +156,6 @@
       min-width:100px;
       box-shadow: 0 6px 16px rgba(28,29,34,0.12);
       transition: transform .12s ease, box-shadow .12s ease, opacity .12s;
-      font-family: 'Poppins', sans-serif;
     }
     button.btn:active{ transform: translateY(1px) scale(.998); }
     button.ghost{
