--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
       min-width:100px;
       box-shadow: 0 6px 16px rgba(28,29,34,0.12);
       transition: transform .12s ease, box-shadow .12s ease, opacity .12s;
+      button.btn {
+  font-family: 'Poppins', sans-serif;
+}
+
     }
     button.btn:active{ transform: translateY(1px) scale(.998); }
     button.ghost{
