--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       flex-direction:column;
       align-items:center;
       gap:4px;
-      transform: translateY(-6px);
+      transform: translate(-50%, -42%);
       font-family: 'Poppins', sans-serif; /* font morbido */
     }
 
